js262/test/language/line-terminators/invalid-comment-single-ls.js


/*---
info: |
    Single line comments are terminated by the LINE SEPARATOR (U+2028)
    character
es5id: 7.3_A3.3_T1
description: Insert LINE SEPARATOR (\u2028) into single line comment
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

 ??? (invalid)
